gateway/higress/ai-proxy/on-premises/ai-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/destination: llm-qwen2-1-5b.dns:8080
    higress.io/prefix-match-header-x-higress-llm-model: qwen
  name: ai-route-qwen2-1-5b
  namespace: higress-system
spec:
  ingressClassName: higress
  rules:
  - http:
      paths:
      - backend:
          resource:
            apiGroup: networking.higress.io
            kind: McpBridge
            name: default
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    higress.io/destination: llm-gemma-2-2b.dns:8080
    higress.io/prefix-match-header-x-higress-llm-model: gemma
  name: ai-route-gemma-2-2b
  namespace: higress-system
spec:
  ingressClassName: higress
  rules:
  - http:
      paths:
      - backend:
          resource:
            apiGroup: networking.higress.io
            kind: McpBridge
            name: default
        path: /
        pathType: Prefix
